<resources>
    <string name="app_name">Memo App</string>
    <string name="add_memo_hint">Add a memo</string>
    <string name="cd_delete_memo">delete memo</string>
    <string name="cd_edit_memo">Edit memo</string>
    <string name="lbl_memo_name">Memo name:</string>
    <string name="rb_text_normal">Normal</string>
    <string name="rb_text_important">Important</string>
    <string name="rb_text_urgent">Urgent</string>
    <string name="lbl_flag">Set a flag:</string>
    <string name="empty_view_text">No memos to display</string>
    <string name="btn_set_alert">Set an alert</string>
    <string name="tv_no_alarms_set">No alarms set</string>
    <string name="btn_update_alert">Update Alert</string>
    <string name="tv_current_alert_text">"Alert set for: "</string>
    <string name="notification_title">Memo Alert</string>
    <string name="alert_replace_message">Are you sure you want to replace the previous alert?</string>
    <string name="positive_yes">Yes</string>
    <string name="negative_no">No</string>
    <string name="delete_memo_message">Are you sure?</string>
    <string name="positive_delete">Delete</string>
    <string name="negative_cancel">Cancel</string>
</resources>
